<resources>
    <string name="app_name">My Note App</string>
    <string name="text_login">Login</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_register">Register</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_menu_note">Menu Note</string>
    <string name="text_add_note">Add Note</string>
    <string name="text_error_note_empty">Your Note is Empty</string>
    <string name="text_menu_edit_item">Edit</string>
    <string name="text_menu_delete_item">Delete</string>
    <string name="text_menu_change_password">Change Password</string>
    <string name="text_menu_logout">Logout</string>
    <string name="text_hint_title">Title</string>
    <string name="text_hint_note">Note</string>
    <string name="text_save">Save</string>
    <string name="text_error_empty_title">Title cannot be empty</string>
    <string name="text_error_empty_note">Note cannot be empty</string>
    <string name="error_text_login_not_correct">Username and Password is not Correct</string>
    <string name="error_text_empty_username">Username is Empty</string>
    <string name="error_text_empty_password">Password is Empty</string>
    <string name="error_text_empty_confirmed_password">Confirmed Password is Empty</string>
    <string name="error_password_not_match">Password does not Match</string>
    <string name="error_username_is_taken">Username is Already Taken</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome">Welcome to My Note App</string>
    <string name="text_menu_create_item">Create</string>
</resources>